--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <h1>MODULE JAVASCRIPT</h1>
-    <script src='js/javascriptsheet.js' async></script>
+    <!-- <script src='js/javascriptsheet.js' async></script> -->
+    <script src='js/string.js' async></script>
 </body>
-</html>
+</html> 
