--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <h1>MODULE JAVASCRIPT</h1>
     <!-- <script src='js/javascriptsheet.js' async></script> -->
-    <script src='js/string.js' async></script>
+    <!-- <script src='js/string.js' async></script> -->
+     <script src='js/password.js' async></script>
 </body>
 </html> 
